Cherry-pick 301043@main (1d16639f9d57). https://bugs.webkit.org/show_bug.cgi?id=300085

[GTK][WPE] OpenGL assets created by WebGL are not released when destroying the WebGLRenderingContext
    https://bugs.webkit.org/show_bug.cgi?id=300085

    Reviewed by Carlos Garcia Campos.

    Stop using a singleton for the ANGLE sharing context. Each ANGLE context will use
    its own ANGLE sharing context instead, that will be created and destroyed together
    with the ANGLE context. This ensures that all the OpenGL resources that were created
    by ANGLE will be destroyed when the contexts are destroyed.

    * Source/WebCore/platform/graphics/PlatformDisplay.cpp:
    (WebCore::PlatformDisplay::clearGLContexts):
    * Source/WebCore/platform/graphics/PlatformDisplay.h:
    * Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.h:
    * Source/WebCore/platform/graphics/angle/PlatformDisplayANGLE.cpp:
    (WebCore::PlatformDisplay::angleSharingGLContext):
    (WebCore::PlatformDisplay::clearANGLESharingGLContext): Deleted.
    * Source/WebCore/platform/graphics/texmap/GraphicsContextGLTextureMapperANGLE.cpp:
    (WebCore::GraphicsContextGLANGLE::~GraphicsContextGLANGLE):
    (WebCore::GraphicsContextGLTextureMapperANGLE::platformInitializeContext):

    Canonical link: https://commits.webkit.org/301043@main