Source/WebCore/platform/graphics/PlatformDisplay.cpp
@@ -131,9 +131,6 @@ void PlatformDisplay::clearSharingGLContext()
 #if ENABLE(VIDEO) && USE(GSTREAMER_GL)
     m_gstGLContext = nullptr;
 #endif
-#if ENABLE(WEBGL) && !PLATFORM(WIN)
-    clearANGLESharingGLContext();
-#endif
     m_sharingGLContext = nullptr;
 }
 
